--- a/AvaliaoContinuada2/app/src/main/res/layout/activity_main.xml
+++ b/AvaliaoContinuada2/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_comprar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -96,7 +96,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/btn_comprar"
         app:srcCompat="@drawable/cachorrofeliz" />
 
     <ImageView
@@ -107,8 +107,20 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/btn_comprar"
         app:srcCompat="@drawable/huskyfeliz" />
+
+    <Switch
+        android:id="@+id/sw_seguranca"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:text="@string/cachorro_crianca"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_comprar"
+        android:checked="false"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
