--- a/AvaliaoContinuada2/app/src/main/res/layout/activity_main.xml
+++ b/AvaliaoContinuada2/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/informe_numero_1"
         android:textSize="25sp"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.098"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +58,7 @@
         android:text="@string/cachorro2"
         android:textColor="@color/black"
         android:textSize="30sp"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
